--- a/index.html
+++ b/index.html
@@ -1,13 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css" integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Giallo Booleano</title>
 </head>
+
 <body>
-    
+
+    <!-- header -->
+    <header>
+
+    </header>
+
+    <!-- contenuto -->
+    <main class="container">
+        <!-- sezione ricetta -->
+        <section>
+            <div class="row">
+                <div class="col-sx">
+
+                </div>
+                <div class="col-dx">
+
+                </div>
+            </div>
+        </section>
+
+        <!-- sezione presentazione ricetta-->
+        <section>
+            <p class="clearfix">
+                <img src="img/tiramisu.jpg" id="small-tiramisu" alt="Tiramisù" class="float-sx">
+                Back in the day, grandmothers used to prepare a breakfast that we might call humble today, but was considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg into a glass, beat it with sugar, and add coffee or hot milk, for children or <strong>Marsala wine</strong> or aniseed for adults. This marvelous cream gave rise to mascarpone cream used to make <strong>Tiramisù</strong> (mascarpone cheese and ladyfingers dessert). This is the <strong>best Italian dessert</strong>, the most popular and beloved of them all, and it has also birthded many other versions, even an egg-free Tiramisù! There is also strawberry and Nutella tiramisù! Altough the origins of this famous dessert are unclear, because it is disputed between the regions of Veneto, Friuli-Venezia Giulia, Piedmont and Tuscany, it remains a cornerstone of Italian cuisine and it's widely prepared from North to South. Unfortunately, we weren't able to find out who invented it, but we can certainly teach you how to prepare your best tiramisù ever. So here's the recipe: try it and let us know what you think!
+            </p>
+
+        </section>
+
+
+
+    </main>
+
+    <!-- footer -->
+    <footer>
+
+    </footer>
+
+
+
 </body>
+
 </html>
