--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -15,29 +18,74 @@
 
     <!-- header -->
     <header>
-
+        <h1>GIALLO BOOLEANO</h1>
     </header>
 
     <!-- contenuto -->
     <main class="container">
         <!-- sezione ricetta -->
+
+
         <section>
+            <h4>DOLCI E DESSERTS</h4>
+
+            <h2 class="title-desktop">Tiramisù (Dolce Tradizionale)</h2>
+            <h2 class="title-mobile">Tiramisù </h2>
             <div class="row">
                 <div class="col-sx">
-
+                    <img src="img/image (10).png" alt="tiramisù">
                 </div>
                 <div class="col-dx">
-
+                    <h5>In breve</h5>
+                    <span>Difficoltà: <strong>Facile</strong></span>
+                    <span>Tempo: <strong>40 min</strong></span>
+                    <span>Porzione per: <strong>8 persone</strong></span>
+                    <span>Costo: <strong>contenuto</strong></span>
+                    <span><strong>Note</strong>: +2 ore di riposo in frigo</span>
                 </div>
             </div>
         </section>
+
+        <!-- sezione social -->
+         <section class="social">
+
+            <span class="social-desktop"><i class="fa-brands fa-facebook"></i>FACEBOOK</span>
+            <span class="social-tablet-mobile"><i class="fa-brands fa-facebook"></i></span>
+
+            <span class="social-desktop"><i class="fa-brands fa-twitter"></i>TWITTER</span>
+            <span class="social-tablet-mobile"><i class="fa-brands fa-twitter"></i></span>
+
+            <span class="social-desktop"><i class="fa-brands fa-instagram"></i>INSTAGRAM</span>
+            <span class="social-tablet-mobile"><i class="fa-brands fa-instagram"></i></span>
+
+            <span class="social-desktop"><i class="fa-brands fa-pinterest"></i>PINTEREST</span>
+            <span class="social-tablet-mobile"><i class="fa-brands fa-pinterest"></i></span>
+
+            <span class="social-desktop"><i class="fa-brands fa-youtube"></i>YOUTUBE</span>
+            <span class="social-tablet-mobile"><i class="fa-brands fa-youtube"></i></span>
+
+         </section>
+
+         <!-- banner -->
+
+         <img src="img/banner.png" alt="banner">
 
         <!-- sezione presentazione ricetta-->
         <section>
             <p class="clearfix">
                 <img src="img/tiramisu.jpg" id="small-tiramisu" alt="Tiramisù" class="float-sx">
-                
-                Back in the day, grandmothers used to prepare a breakfast that we might call humble today, but was considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg into a glass, beat it with sugar, and add coffee or hot milk, for children or <strong>Marsala wine</strong> or aniseed for adults. This marvelous cream gave rise to mascarpone cream used to make <strong>Tiramisù</strong> (mascarpone cheese and ladyfingers dessert). This is the <strong>best Italian dessert</strong>, the most popular and beloved of them all, and it has also birthded many other versions, even an egg-free Tiramisù! There is also strawberry and Nutella tiramisù! Altough the origins of this famous dessert are unclear, because it is disputed between the regions of Veneto, Friuli-Venezia Giulia, Piedmont and Tuscany, it remains a cornerstone of Italian cuisine and it's widely prepared from North to South. Unfortunately, we weren't able to find out who invented it, but we can certainly teach you how to prepare your best tiramisù ever. So here's the recipe: try it and let us know what you think!
+
+                Back in the day, grandmothers used to prepare a breakfast that we might call humble today, but was
+                considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg into
+                a glass, beat it with sugar, and add coffee or hot milk, for children or <strong>Marsala wine</strong>
+                or aniseed for adults. This marvelous cream gave rise to mascarpone cream used to make
+                <strong>Tiramisù</strong> (mascarpone cheese and ladyfingers dessert). This is the <strong>best Italian
+                    dessert</strong>, the most popular and beloved of them all, and it has also birthded many other
+                versions, even an egg-free Tiramisù! There is also strawberry and Nutella tiramisù! Altough the origins
+                of this famous dessert are unclear, because it is disputed between the regions of Veneto, Friuli-Venezia
+                Giulia, Piedmont and Tuscany, it remains a cornerstone of Italian cuisine and it's widely prepared from
+                North to South. Unfortunately, we weren't able to find out who invented it, but we can certainly teach
+                you how to prepare your best tiramisù ever. So here's the recipe: try it and let us know what you think!
             </p>
 
         </section>
@@ -48,6 +96,33 @@
 
     <!-- footer -->
     <footer>
+        <div class="info-footer">
+            <span><strong>&#169; 2021 Giallo Booleano S.p.a.</strong></span>
+            <br>
+            <span>Via Tal dei tali, 10 - 88046 Lamezia Terme - VAT 43940293020</span>
+        </div>
+
+        <div class="nav-footer">
+            <ul>
+                <a href="nav-link">
+                <li>About us</li></a>
+
+                <a href="nav-link">
+                <li>Terms of use</li></a>
+
+                <a href="nav-link">
+                <li>Privacy Policy</li></a>
+
+                <a href="nav-link">
+                <li>Cookie Policy</li></a>
+
+                <a href="nav-link">
+                <li>Disclaimer</li></a>
+                    
+
+            </ul>
+
+        </div>
 
     </footer>
 
