--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
         integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
@@ -22,76 +26,88 @@
     </header>
 
     <!-- contenuto -->
-    <main class="container">
-        <!-- sezione ricetta -->
+    <main>
+        <div class="container">
+            <!-- sezione ricetta -->
 
 
-        <section>
-            <h4>DOLCI E DESSERTS</h4>
+            <section>
+                <h4>DOLCI E DESSERTS</h4>
 
-            <h2 class="title-desktop">Tiramisù (Dolce Tradizionale)</h2>
-            <h2 class="title-mobile">Tiramisù </h2>
-            <div class="row">
-                <div class="col-sx">
-                    <img src="img/image (10).png" alt="tiramisù">
+                <h2 class="title-desktop">Tiramisù (Dolce Tradizionale)</h2>
+                <h2 class="title-mobile">Tiramisù </h2>
+                <div class="row">
+                    <div class="col-sx">
+                        <img src="img/image (10).png" alt="tiramisù">
+                    </div>
+                    <div class="col-dx">
+                        <h5>In breve</h5>
+                        <span>Difficoltà: <strong>Facile</strong></span>
+                        <span>Tempo: <strong>40 min</strong></span>
+                        <span>Porzione per: <strong>8 persone</strong></span>
+                        <span>Costo: <strong>contenuto</strong></span>
+                        <span><strong>Note</strong>: +2 ore di riposo in frigo</span>
+                    </div>
                 </div>
-                <div class="col-dx">
-                    <h5>In breve</h5>
-                    <span>Difficoltà: <strong>Facile</strong></span>
-                    <span>Tempo: <strong>40 min</strong></span>
-                    <span>Porzione per: <strong>8 persone</strong></span>
-                    <span>Costo: <strong>contenuto</strong></span>
-                    <span><strong>Note</strong>: +2 ore di riposo in frigo</span>
-                </div>
+            </section>
+
+            <!-- sezione social -->
+            <section class="social">
+
+                <a href="#"><span class="social-desktop"><i class="fa-brands fa-facebook"></i>FACEBOOK</span></a>
+                <a href="#"><span class="social-tablet-mobile"><i class="fa-brands fa-facebook"></i></span></a>
+
+                <a href="#"><span class="social-desktop"><i class="fa-brands fa-twitter"></i>TWITTER</span></a>
+                <a href="#"><span class="social-tablet-mobile"><i class="fa-brands fa-twitter"></i></span></a>
+
+                <a href="#"><span class="social-desktop"><i class="fa-brands fa-instagram"></i>INSTAGRAM</span></a>
+                <a href="#"><span class="social-tablet-mobile"><i class="fa-brands fa-instagram"></i></span></a>
+
+                <a href="#"><span class="social-desktop"><i class="fa-brands fa-pinterest"></i>PINTEREST</span></a>
+                <a href="#"><span class="social-tablet-mobile"><i class="fa-brands fa-pinterest"></i></span></a>
+
+                <a href="#"><span class="social-desktop"><i class="fa-brands fa-youtube"></i>YOUTUBE</span></a>
+                <a href="#"><span class="social-tablet-mobile"><i class="fa-brands fa-youtube"></i></span></a>
+
+            </section>
+
+            <!-- banner -->
+            <div class="banner">
+                <img src="img/banner.png" alt="banner">
             </div>
-        </section>
 
-        <!-- sezione social -->
-         <section class="social">
+            <!-- sezione presentazione ricetta-->
+            <section>
+                <h3>PRESENTATION</h3>
+                <div class="separatore"></div>
+                <p class="clearfix">
+                    <img src="img/tiramisu.jpg" id="small-tiramisu" alt="Tiramisù" class="float-sx">
 
-            <span class="social-desktop"><i class="fa-brands fa-facebook"></i>FACEBOOK</span>
-            <span class="social-tablet-mobile"><i class="fa-brands fa-facebook"></i></span>
+                    Back in the day, grandmothers used to prepare a breakfast that we might call humble today, but was
+                    considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg
+                    into
+                    a glass, beat it with sugar, and add coffee or hot milk, for children or <strong>Marsala
+                        wine</strong>
+                    or aniseed for adults. This marvelous cream gave rise to mascarpone cream used to make
+                    <strong>Tiramisù</strong> (mascarpone cheese and ladyfingers dessert). This is the <strong>best
+                        Italian
+                        dessert</strong>, the most popular and beloved of them all, and it has also birthded many other
+                    versions, even an egg-free Tiramisù! There is also strawberry and Nutella tiramisù! Altough the
+                    origins
+                    of this famous dessert are unclear, because it is disputed between the regions of Veneto,
+                    Friuli-Venezia
+                    Giulia, Piedmont and Tuscany, it remains a cornerstone of Italian cuisine and it's widely prepared
+                    from
+                    North to South. Unfortunately, we weren't able to find out who invented it, but we can certainly
+                    teach
+                    you how to prepare your best tiramisù ever. So here's the recipe: try it and let us know what you
+                    think!
+                </p>
 
-            <span class="social-desktop"><i class="fa-brands fa-twitter"></i>TWITTER</span>
-            <span class="social-tablet-mobile"><i class="fa-brands fa-twitter"></i></span>
-
-            <span class="social-desktop"><i class="fa-brands fa-instagram"></i>INSTAGRAM</span>
-            <span class="social-tablet-mobile"><i class="fa-brands fa-instagram"></i></span>
-
-            <span class="social-desktop"><i class="fa-brands fa-pinterest"></i>PINTEREST</span>
-            <span class="social-tablet-mobile"><i class="fa-brands fa-pinterest"></i></span>
-
-            <span class="social-desktop"><i class="fa-brands fa-youtube"></i>YOUTUBE</span>
-            <span class="social-tablet-mobile"><i class="fa-brands fa-youtube"></i></span>
-
-         </section>
-
-         <!-- banner -->
-
-         <img src="img/banner.png" alt="banner">
-
-        <!-- sezione presentazione ricetta-->
-        <section>
-            <p class="clearfix">
-                <img src="img/tiramisu.jpg" id="small-tiramisu" alt="Tiramisù" class="float-sx">
-
-                Back in the day, grandmothers used to prepare a breakfast that we might call humble today, but was
-                considered very rich at the time! Today the recipe is still unchanged, just break a very fresh egg into
-                a glass, beat it with sugar, and add coffee or hot milk, for children or <strong>Marsala wine</strong>
-                or aniseed for adults. This marvelous cream gave rise to mascarpone cream used to make
-                <strong>Tiramisù</strong> (mascarpone cheese and ladyfingers dessert). This is the <strong>best Italian
-                    dessert</strong>, the most popular and beloved of them all, and it has also birthded many other
-                versions, even an egg-free Tiramisù! There is also strawberry and Nutella tiramisù! Altough the origins
-                of this famous dessert are unclear, because it is disputed between the regions of Veneto, Friuli-Venezia
-                Giulia, Piedmont and Tuscany, it remains a cornerstone of Italian cuisine and it's widely prepared from
-                North to South. Unfortunately, we weren't able to find out who invented it, but we can certainly teach
-                you how to prepare your best tiramisù ever. So here's the recipe: try it and let us know what you think!
-            </p>
-
-        </section>
+            </section>
 
 
-
+        </div>
     </main>
 
     <!-- footer -->
@@ -105,20 +121,25 @@
         <div class="nav-footer">
             <ul>
                 <a href="nav-link">
-                <li>About us</li></a>
+                    <li>About us</li>
+                </a>
 
                 <a href="nav-link">
-                <li>Terms of use</li></a>
+                    <li>Terms of use</li>
+                </a>
 
                 <a href="nav-link">
-                <li>Privacy Policy</li></a>
+                    <li>Privacy Policy</li>
+                </a>
 
                 <a href="nav-link">
-                <li>Cookie Policy</li></a>
+                    <li>Cookie Policy</li>
+                </a>
 
                 <a href="nav-link">
-                <li>Disclaimer</li></a>
-                    
+                    <li>Disclaimer</li>
+                </a>
+
 
             </ul>
 
