--- a/index.html
+++ b/index.html
@@ -55,19 +55,24 @@
             <section class="social">
 
                 <a href="#"><span class="social-desktop"><i class="fa-brands fa-facebook"></i>FACEBOOK</span></a>
-                <a href="#"><span class="social-tablet-mobile"><i class="fa-brands fa-facebook"></i></span></a>
+                <a href="#"><span class="social-tablet"><i class="fa-brands fa-facebook"></i></span></a>
+                <a href="#"><span class="social-mobile"><i class="fa-brands fa-facebook"></i></span></a>
 
                 <a href="#"><span class="social-desktop"><i class="fa-brands fa-twitter"></i>TWITTER</span></a>
-                <a href="#"><span class="social-tablet-mobile"><i class="fa-brands fa-twitter"></i></span></a>
+                <a href="#"><span class="social-tablet"><i class="fa-brands fa-twitter"></i></span></a>
+                <a href="#"><span class="social-mobile"><i class="fa-brands fa-twitter"></i></span></a>
 
                 <a href="#"><span class="social-desktop"><i class="fa-brands fa-instagram"></i>INSTAGRAM</span></a>
-                <a href="#"><span class="social-tablet-mobile"><i class="fa-brands fa-instagram"></i></span></a>
+                <a href="#"><span class="social-tablet"><i class="fa-brands fa-instagram"></i></span></a>
+                <a href="#"><span class="social-mobile"><i class="fa-brands fa-instagram"></i></span></a>
 
                 <a href="#"><span class="social-desktop"><i class="fa-brands fa-pinterest"></i>PINTEREST</span></a>
-                <a href="#"><span class="social-tablet-mobile"><i class="fa-brands fa-pinterest"></i></span></a>
+                <a href="#"><span class="social-tablet"><i class="fa-brands fa-pinterest"></i></span></a>
+                <a href="#"><span class="social-mobile"><i class="fa-brands fa-pinterest"></i></span></a>
 
                 <a href="#"><span class="social-desktop"><i class="fa-brands fa-youtube"></i>YOUTUBE</span></a>
-                <a href="#"><span class="social-tablet-mobile"><i class="fa-brands fa-youtube"></i></span></a>
+                <a href="#"><span class="social-tablet"><i class="fa-brands fa-youtube"></i></span></a>
+                <a href="#"><span class="social-mobile"><i class="fa-brands fa-youtube"></i></span></a>
 
             </section>
 
